# four-dimensions

./: Cargo.toml  README.md  build.sh  index.html
resources/: tex
src/: lib.rs  mesh.rs  model.rs  render.rs  utils.rs  world.rs
src/mesh/: facet.rs  poly.rs  poly1.rs  poly2.rs  region.rs  space.rs  texture.rs
src/mesh/poly/: polygon.rs
src/mesh/poly2/: copy_of_clipping_library.rs
src/render/: from_tex.rs  to_tex.rs
