[package]
name = "four_dimensions"
version = "0.0.0"
authors = ["fine-geometer"]
edition = "2018"
description = "A 4-dimensional game."
license = "MIT OR Apache-2.0"
repository = "https://github.com/finegeometer/four-dimensions"
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
nalgebra = "0.18"
alga = { version = "0.9", default-features = false }
num-traits = { version = "0.2", default-features = false }

polygon3 = { git = "https://github.com/finegeometer/polygon3-rs" }
render-4d = { git = "https://github.com/finegeometer/render-4d-rs" }

console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlParagraphElement',
  'MouseEvent',
  'Node',
  'KeyboardEvent',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
]
